src/tests/invalid/given_a_new_state_machine_builder_it_should_have_at_least_one_state.stderr
error[E0599]: no method named `build` found for opaque type `impl InitialState<_, _>` in the current scope
 --> src/tests/invalid/given_a_new_state_machine_builder_it_should_have_at_least_one_state.rs:4:43
  |
4 |     let _fsm = StateMachineBuilder::new().build()?;
  |                                           ^^^^^ method not found in `impl InitialState<_, _>`
